menu y modif loguin

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.12.1/font/bootstrap-icons.min.css">
    
     <title>Gigaflop pp3</title>
   </head>
